--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
   <section id="benefits">
     <div class="content-benefits container">
       <div class="benefit">
-        <i class="icon-chart"></i>
+        <i class="icon-lock-7"></i>
         <h4>Segurança</h4>
         <span>
           Os “stops” (máximo ponto de perda), são mais curtos no método daytrade, e o lucro pode ser apurado
@@ -75,7 +75,7 @@
         </span>
       </div>
       <div class="benefit">
-        <i class="icon-chart-bar"></i>
+        <i class="icon-wallet"></i>
         <h4>Tranquilidade</h4>
         <span>
           Como todas as operações são diárias, não há risco de ser pego de surpresa em grandes oscilações e crises
@@ -83,7 +83,7 @@
         </span>
       </div>
       <div class="benefit">
-        <i class="icon-chart-2"></i>
+        <i class="icon-lightbulb"></i>
         <h4>Oportunidade</h4>
         <span>
           A cada dia, seus ganhos podem ser aumentados, de acordo com seu conhecimento e confiança, fazendo com que sua
@@ -142,14 +142,14 @@
       <div class="content-structure">
         <div class="left-content">
           <div class="structure">
-            <i class="icon-chart-bar"></i>
+            <i class="icon-paper-plane"></i>
             <h4>Sala Telegram</h4>
             <span>
               Para acompanhamento, suporte, estudo e retirada de dúvidas;
             </span>
           </div>
           <div class="structure">
-            <i class="icon-chart-bar"></i>
+            <i class="icon-arrows-ccw"></i>
             <h4>Atualizações de aula na plataforma</h4>
             <span>
               Sempre buscando acompanhar as novidades do mercado, e trazer para os alunos as novas tendências de
@@ -170,14 +170,14 @@
         </div>
         <div class="right-content">
           <div class="structure">
-            <i class="icon-chart-bar"></i>
+            <i class="icon-users"></i>
             <h4>Mentoria</h4>
             <span>
               Duas aulas ao vivo mensais, para análise conjunta de mercado.
             </span>
           </div>
           <div class="structure">
-            <i class="icon-chart-bar"></i>
+            <i class="icon-graduation-cap"></i>
             <h4>Curso do iniciante ao avançado</h4>
             <span>
               Aulas voltadas para quem deseja iniciar no mercado de investimento até alunos que desejam conhecer novas
@@ -185,7 +185,7 @@
             </span>
           </div>
           <div class="structure">
-            <i class="icon-chart-bar"></i>
+            <i class="icon-laptop"></i>
             <h4>Acesso</h4>
             <span>
               Acesso de um ano a todo material, constantemente atualizado, de acordo com as necessidades de mercado;
