--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <title>Anima Trades</title>
   <meta name="description" content="Anima Trades">
   <meta name="robots" content="index, follow">
+  <meta name="keywords" content="">
 </head>
 
 <body>
