feature - change link

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
           mercado de ações, com intuito único de: realizar operações positivas e vencedoras. O método aplicado é pautado
           por operações diárias, que se iniciam e se encerram no mesmo dia. Adquira nosso material, e tenha a liberdade
           de trabalhar de qualquer lugar.</h2>
-        <a href="https://sun.eduzz.com/1012047" class="btn" aria-label="comprar" title="comprar">Comprar</a>
+        <a href="https://sun.eduzz.com/1012047?cupom=DONA" class="btn" aria-label="comprar" title="comprar">Comprar</a>
       </div>
     </div>
     <div class="filter"></div>
@@ -94,7 +94,7 @@
         </span>
       </div>
       <div class="content">
-        <a class="btn" href="https://sun.eduzz.com/1012047" aria-label="comprar" title="comprar">comprar</a>
+        <a class="btn" href="https://sun.eduzz.com/1012047?cupom=DONA" aria-label="comprar" title="comprar">comprar</a>
       </div>
     </div>
     <div class="crop-bottom-session"></div>
@@ -128,7 +128,7 @@
       </div>
     </div>
     <div class="content">
-      <a href="https://sun.eduzz.com/1012047" class="btn" aria-label="comprar" title="comprar">comprar</a>
+      <a href="https://sun.eduzz.com/1012047?cupom=DONA" class="btn" aria-label="comprar" title="comprar">comprar</a>
     </div>
   </section>
 
@@ -198,7 +198,7 @@
       </div>
     </div>
     <div class="content">
-      <a href="https://sun.eduzz.com/1012047" class="btn" aria-label="comprar" title="comprar">comprar</a>
+      <a href="https://sun.eduzz.com/1012047?cupom=DONA" class="btn" aria-label="comprar" title="comprar">comprar</a>
     </div>
     <div class="crop-bottom-session"></div>
   </section>
@@ -241,7 +241,7 @@
       </div>
     </div>
     <div class="content">
-      <a href="https://sun.eduzz.com/1012047" class="btn" aria-label="comprar" title="comprar">comprar</a>
+      <a href="https://sun.eduzz.com/1012047?cupom=DONA" class="btn" aria-label="comprar" title="comprar">comprar</a>
     </div>
   </section>
 
