--- a/src/index.html
+++ b/src/index.html
@@ -90,11 +90,11 @@
         <h4>Oportunidade</h4>
         <span>
           A cada dia, seus ganhos podem ser aumentados, de acordo com seu conhecimento e confiança, fazendo com que sua
-          margem de lucro possa sempre ser majorada.
+          margem de lucro possa sempre ser melhorada.
         </span>
       </div>
       <div class="content">
-        <a class="btn" href="https://sun.eduzz.com/1012047?cupom=DONA" aria-label="comprar" title="comprar">comprar</a>
+        <a class="btn" href="https://sun.eduzz.com/1012047?cupom=Promo" aria-label="comprar" title="comprar">comprar</a>
       </div>
     </div>
     <div class="crop-bottom-session"></div>
@@ -106,11 +106,11 @@
   <section id="results">
     <div class="crop-top-session"></div>
     <div class="content container">
-      <h2 class="title">SEJA PARTE DO NOSSO TIME DE RESULTADOS</h2>
+      <h2 class="title">SEJA PARTE DO NOSSO TIME DE TRADERS</h2>
       <hr />
       <p>
         Compreender o mercado de investimentos, entender como ele funciona, desde a abertura da conta até as
-        estratégias, tendo ao fim, resultados positivos ao final de cada mês. Esse é o objetivo atingido pode nossos
+        estratégias, tendo ao fim, resultados positivos ao final de cada mês. Esse é o objetivo atingido por nossos
         alunos. Confira os resultados:
       </p>
     </div>
@@ -128,7 +128,7 @@
       </div>
     </div>
     <div class="content">
-      <a href="https://sun.eduzz.com/1012047?cupom=DONA" class="btn" aria-label="comprar" title="comprar">comprar</a>
+      <a href="https://sun.eduzz.com/1012047?cupom=Promo" class="btn" aria-label="comprar" title="comprar">comprar</a>
     </div>
   </section>
 
@@ -163,7 +163,7 @@
             <i class="icon-chart-bar"></i>
             <h4>Métodos de operações exclusivos</h4>
             <span>
-              Métodos desenvolvidos pelos nossos professores, criados com exclusividade para o nosso curso;
+              Métodos desenvolvidos pela nossa equipe de Traders profissionais, criados com exclusividade para o nosso curso;
             </span>
           </div>
         </div>
@@ -198,7 +198,7 @@
       </div>
     </div>
     <div class="content">
-      <a href="https://sun.eduzz.com/1012047?cupom=DONA" class="btn" aria-label="comprar" title="comprar">comprar</a>
+      <a href="https://sun.eduzz.com/1012047?cupom=Promo" class="btn" aria-label="comprar" title="comprar">comprar</a>
     </div>
     <div class="crop-bottom-session"></div>
   </section>
@@ -214,16 +214,16 @@
         <div class="image">
           <img src="./assets/img/user2.jpeg" alt="Imagem do usuário que forneceu o depoimento" />
         </div>
-        <span class="name">Guilherme</span>
+        <span class="name">Guilherme Bento</span>
         <div class="description">
-          “Com um investimento de mil reais, DUPLIQUEI minha banca em um mês”
+          “Curso muito didático, com professores excelentes. Mudou minha maneira de analisar o mercado”
         </div>
       </div>
       <div class="testimonial">
         <div class="image">
           <img src="./assets/img/user1.jpeg" />
         </div>
-        <span class="name">Amabili</span>
+        <span class="name">Amabili Cunha</span>
         <div class="description">
           “Recuperei o investimento da compra do curso em apenas 2 semanas de operações, sem correr maiores riscos,
           apenas com gerenciamento correto. Obrigada!!”
@@ -241,7 +241,7 @@
       </div>
     </div>
     <div class="content">
-      <a href="https://sun.eduzz.com/1012047?cupom=DONA" class="btn" aria-label="comprar" title="comprar">comprar</a>
+      <a href="https://sun.eduzz.com/1012047?cupom=Promo" class="btn" aria-label="comprar" title="comprar">comprar</a>
     </div>
   </section>
 
