change DONA to Promo

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
           mercado de ações, com intuito único de: realizar operações positivas e vencedoras. O método aplicado é pautado
           por operações diárias, que se iniciam e se encerram no mesmo dia. Adquira nosso material, e tenha a liberdade
           de trabalhar de qualquer lugar.</h2>
-        <a href="https://sun.eduzz.com/1012047?cupom=DONA" class="btn" aria-label="comprar" title="comprar">Comprar</a>
+        <a href="https://sun.eduzz.com/1012047?cupom=Promo" class="btn" aria-label="comprar" title="comprar">Comprar</a>
       </div>
     </div>
     <div class="filter"></div>
@@ -163,7 +163,8 @@
             <i class="icon-chart-bar"></i>
             <h4>Métodos de operações exclusivos</h4>
             <span>
-              Métodos desenvolvidos pela nossa equipe de Traders profissionais, criados com exclusividade para o nosso curso;
+              Métodos desenvolvidos pela nossa equipe de Traders profissionais, criados com exclusividade para o nosso
+              curso;
             </span>
           </div>
         </div>
